<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.openl.rules</groupId>
        <artifactId>openl-tablets</artifactId>
        <version>6.4.0-SNAPSHOT</version>
        <relativePath>../..</relativePath>
    </parent>
    <artifactId>openl-maven-plugin</artifactId>
    <packaging>maven-plugin</packaging>
    <name>OpenL - Maven Plugin</name>
    <url>https://openl-tablets.org</url>
    <organization>
        <name>OpenL Tablets</name>
        <url>https://openl-tablets.org</url>
    </organization>
    <properties>
        <!-- 512MB Should be enough to don't fall in OutOfMemoryError -->
        <invoker.mavenOpts>-Xms16m -Xmx512m -XX:MaxMetaspaceSize=256m</invoker.mavenOpts>
        <invoker.noPerf>true</invoker.noPerf>
        <!-- Keeps a developer machine responsive, but truncates to a single thread on a
             4-core CI runner - CI passes an explicit value (e.g. 1C) -->
        <invoker.parallelThreads>0.4C</invoker.parallelThreads>
        <skipTestsForQuick>true</skipTestsForQuick>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-plugin-api</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-core</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.codehaus.plexus</groupId>
            <artifactId>plexus-utils</artifactId>
        </dependency>
        <!-- Xpp3Dom lives here in plexus-utils 4.x; needed to read the anchor's <plugin>
             configuration in OpenLPomlessParticipant. Provided at runtime by Maven itself. -->
        <dependency>
            <groupId>org.codehaus.plexus</groupId>
            <artifactId>plexus-xml</artifactId>
            <version>4.1.1</version>
            <scope>provided</scope>
        </dependency>
        <!-- Interactive Y/n prompts in openl:pomless when conflicting sub-anchor proposals
             are detected. Bundled (not provided) because plexus-interactivity-api isn't in Maven's
             plugin foreign-import realm. -->
        <dependency>
            <groupId>org.codehaus.plexus</groupId>
            <artifactId>plexus-interactivity-api</artifactId>
            <version>1.5.1</version>
        </dependency>
        <!-- dependencies to annotations -->
        <dependency>
            <groupId>org.apache.maven.plugin-tools</groupId>
            <artifactId>maven-plugin-annotations</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>com.helger</groupId>
            <artifactId>jcodemodel</artifactId>
        </dependency>
        <!-- SCM API + git provider used by the 'migrate' goal to create one commit per migrator.  -->
        <dependency>
            <groupId>org.apache.maven.scm</groupId>
            <artifactId>maven-scm-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.maven.scm</groupId>
            <artifactId>maven-scm-manager-plexus</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.maven.scm</groupId>
            <artifactId>maven-scm-provider-gitexe</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.openl.rules</groupId>
            <artifactId>org.openl.rules.project</artifactId>
        </dependency>
        <dependency>
            <groupId>org.openl.rules</groupId>
            <artifactId>org.openl.rules.workspace</artifactId>
        </dependency>
        <dependency>
            <groupId>org.openl.rules</groupId>
            <artifactId>org.openl.rules.repository</artifactId>
        </dependency>
        <dependency>
            <groupId>org.openl.rules</groupId>
            <artifactId>org.openl.rules.ruleservice.deployer</artifactId>
        </dependency>
        <dependency>
            <groupId>org.openl.rules</groupId>
            <artifactId>org.openl.rules.ruleservice.ws</artifactId>
        </dependency>
        <!-- Routes log4j-api users (Apache POI) of the plugin and of the embedded application into the
             Maven slf4j logger. log4j-core stays absent, so the log4j2.properties bundled in the
             ruleservice.ws jar is never read and no log file is created. -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-to-slf4j</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty.ee10</groupId>
            <artifactId>jetty-ee10-annotations</artifactId>
        </dependency>
        <dependency>
            <groupId>org.openl.rules</groupId>
            <artifactId>org.openl.rules.project.validation.openapi</artifactId>
        </dependency>
        <dependency>
            <groupId>org.openl.rules</groupId>
            <artifactId>openl-yaml</artifactId>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-invoker-plugin</artifactId>
                <configuration>
                    <projectsDirectory>it</projectsDirectory>
                    <pomIncludes>
                        <pomInclude>*/pom.xml</pomInclude>
                    </pomIncludes>
                    <setupIncludes>
                        <setupInclude>_1_setup/pom.xml</setupInclude>
                        <setupInclude>_2_install/pom.xml</setupInclude>
                        <setupInclude>_3_performance/pom.xml</setupInclude>
                    </setupIncludes>
                    <preBuildHookScript>setup</preBuildHookScript>
                    <postBuildHookScript>verify</postBuildHookScript>
                    <goals>
                        <goal>clean</goal>
                        <goal>verify</goal>
                    </goals>
                    <parallelThreads>${invoker.parallelThreads}</parallelThreads>
                    <streamLogsOnFailures>true</streamLogsOnFailures>
                    <scope>compile</scope>
                    <properties>
                        <maven.compiler.release>21</maven.compiler.release>
                    </properties>
                    <showErrors>true</showErrors>
                    <!-- `@{jacoco.argLine}` (late-bound by maven-invoker-plugin) rather than `${...}` so the
                         agent flag survives Maven model interpolation. The no-sonar profile declares an
                         empty `<jacoco.argLine/>` default (so Surefire's `@{jacoco.argLine}` interpolates
                         safely when JaCoCo isn't enabled), and Maven would otherwise substitute that empty
                         value into the model before `prepare-agent-integration` runs, dropping the agent
                         from MAVEN_OPTS. -->
                    <mavenOpts>-ea @{jacoco.argLine} ${invoker.mavenOpts} -Dapple.awt.UIElement=true</mavenOpts>
                    <scriptVariables>
                        <noPerf>${invoker.noPerf}</noPerf>
                    </scriptVariables>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>install</goal>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <!-- generate MOJOs documents -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-plugin-plugin</artifactId>
                <configuration>
                    <requirements>
                        <maven>3.6</maven>
                        <jdk>21</jdk>
                        <memory>64m</memory>
                    </requirements>
                </configuration>
            </plugin>
            <plugin>
                <!-- Do not generate project reports -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <reportSets>
                    <reportSet>
                        <reports />
                    </reportSet>
                </reportSets>
            </plugin>
        </plugins>
    </reporting>
    <profiles>
        <profile>
            <id>perf</id>
            <activation>
                <property>
                    <name>!noPerf</name>
                </property>
            </activation>
            <properties>
                <!-- Fine tuned settings to detects memory and performance issues -->
                <invoker.mavenOpts>-Xms16m -Xmx64m -XX:MaxMetaspaceSize=192m</invoker.mavenOpts>
                <invoker.noPerf>false</invoker.noPerf>
            </properties>
        </profile>
        <profile>
            <id>sonar</id>
            <activation>
                <property>
                    <name>sonar</name>
                </property>
            </activation>
            <properties>
                <invoker.mavenOpts />
                <invoker.noPerf>true</invoker.noPerf>
            </properties>
        </profile>
    </profiles>
</project>
